--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/firestore": "^12.8.0",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-bouncy-checkbox": "^2.1.4",
+    "react-native-calendars": "^1.1266.0",
+    "react-native-date-picker": "^4.0.0",
+    "react-native-image-slider-box": "^1.1.8",
+    "react-native-maps": "^0.29.3",
+    "react-native-reanimated": "^2.2.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.7.2",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.5",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
